'分组增加状态'

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap-vue": "^2.20.1",
     "codemirror": "^5.58.3",
     "core-js": "^3.6.5",
+    "d3": "^6.6.0",
     "d3-selection": "^2.0.0",
     "gridstack": "^3.0.0",
     "js-sha256": "^0.9.0",
@@ -38,6 +39,7 @@
     "xterm": "^4.9.0"
   },
   "devDependencies": {
+    "@types/d3": "^6.3.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
