--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -40,10 +40,10 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          draft: true
-          prerelease: true
+          tag_name: latest
+          release_name: latest
+          draft: false
+          prerelease: false
       
       - name: Upload Release Asset
         id: upload-release-asset 
